--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "type": "git",
     "url": "https://github.com/seerdomin/forward-to.git"
   },
+  "bugs": "https://github.com/seerdomin/forward-to/issues",
   "devDependencies": {
     "browserify": "^11.0.0",
     "eslint": "^0.24.1",
