--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "jshint index.js --verbose --reporter=node_modules/jshint-stylish",
     "test": "tape ./test.js | tap-spec",
+    "coverage": "NODE_ENV=coverage istanbul cover ./test.js || :",
     "prebuild": "mkdir -p ./dist ",
     "build": "browserify -d -s forward -g uglifyify ./index.js | exorcist ./dist/forward-to.min.js.map > ./dist/forward-to.min.js"
   },
@@ -24,6 +25,7 @@
     "browserify": "^11.0.0",
     "eslint": "^0.24.1",
     "exorcist": "^0.4.0",
+    "istanbul": "^0.3.17",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1",
     "sinon": "^1.15.4",
