[package] Create an executable for each of the package's scripts

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Forward method calls from one object to another",
   "main": "index.js",
   "scripts": {
-    "lint": "jshint index.js --verbose --reporter=node_modules/jshint-stylish",
-    "test": "tape ./test.js | tap-spec",
-    "coverage": "NODE_ENV=coverage istanbul cover ./test.js || :",
-    "prebuild": "mkdir -p ./dist ",
-    "build": "browserify -d -s forward -g uglifyify ./index.js | exorcist ./dist/forward-to.min.js.map > ./dist/forward-to.min.js"
+    "lint": "./bin/lint",
+    "test": "./bin/test",
+    "coverage": "./bin/coverage",
+    "build": "./bin/build"
   },
   "keywords": [
     "forward",
@@ -28,6 +27,7 @@
     "istanbul": "^0.3.17",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1",
+    "shelljs": "^0.5.1",
     "sinon": "^1.15.4",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.1",
