--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "tap-spec": "^4.0.2",
     "tape": "^4.0.1",
     "uglifyify": "^3.0.1"
+  },
+  "dependencies": {
+    "object-methods": "^1.0.1"
   }
 }
